--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div id="application">
-    <span class="loader">Loading...</span>
+  <div class='container'>
+    <div id="application">
+      <span class="loader">Loading...</span>
+    </div>
   </div>
 
   <script src="index.js"></script>
